[package]
name = "r2d2_example"
version = "0.1.0"
authors = ["xvi <jrip03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"

env_logger = "0.7"
uuid = { version = "0.8", features=["v4"] }

r2d2 = "0.8"
r2d2_sqlite = "0.14"
rusqlite = "0.21"

r2d2_postgres = "0.16"
postgres = "0.18.1"

